--- a/DEVELOPMENT/설치 및 파이썬 연결 68e9f78b3b8d46d89b2f06c982c82855.md
+++ b/DEVELOPMENT/설치 및 파이썬 연결 68e9f78b3b8d46d89b2f06c982c82855.md
@@ -8,7 +8,7 @@ Tags: PostgreSQL
     1. 나의 경우, 설치 파일이 실행되지 않았고, 해당 링크를 참조하여 원인을 찾았다. ([https://sugamza.tistory.com/65](https://sugamza.tistory.com/65))
     2. 사내 보안프로그램 관련 파일인 scewwss.dll 파일로 인해 설치 파일이 실행이 안되었던 것이다.
     
-    ![이벤트 뷰어](%E1%84%89%E1%85%A5%E1%86%AF%E1%84%8E%E1%85%B5%20%E1%84%86%E1%85%B5%E1%86%BE%20%E1%84%91%E1%85%A1%E1%84%8B%E1%85%B5%E1%84%8A%E1%85%A5%E1%86%AB%20%E1%84%8B%E1%85%A7%E1%86%AB%E1%84%80%E1%85%A7%E1%86%AF%2068e9f78b3b8d46d89b2f06c982c82855/Untitled.png)
+    ![이벤트 뷰어](./img/Untitled.png)
     
     이벤트 뷰어
     
